included recommended options for single variant calling

--- a/config/single_sample_aligntment.gotcloud.conf
+++ b/config/single_sample_aligntment.gotcloud.conf
@@ -1,5 +1,9 @@
-OUT_DIR    = /mnt/data/test_1000g_bams/output/
-BATCH_TYPE = sge
+OUT_DIR    = /mnt/data/test_1000g_bams/output_multi-job_snpcall/
+BATCH_TYPE = slurm
 FASTQ_LIST = /home/trubetsk/google-gotcloud/config/HG01051_fastq_list.txt
 REF_DIR = /mnt/data/test_1000g_bams/resources/gotcloud.ref/
 BWA_THREADS = -t 16
+UNIT_CHUNK = 20000000
+MODEL_GLFSINGLE = TRUE
+MODEL_SKIP_DISCOVER = FALSE
+MODEL_AF_PRIOR = TRUE
