--- a/ansible/tasks/nfs_mount_drive_slurm.yml
+++ b/ansible/tasks/nfs_mount_drive_slurm.yml
@@ -11,7 +11,7 @@
       file: path=/mnt/data/ state=directory mode=777 owner=nobody group=nogroup
     - name: export data mount via NFS
       sudo: yes
-      nfsexport: path=/mnt/data dest=/etc/exports options=rw,no_root_squash,sync
+      nfsexport: path=/mnt/data dest=/etc/exports options=rw,no_root_squash,async
       notify:
         - restart NFS
 
@@ -28,4 +28,4 @@
       file: path=/mnt/data/ state=directory
     - name: mount the exported data directory 
       sudo: yes
-      action: mount name=/mnt/data src=frontend001:/mnt/data fstype=nfs opts=rw,sync,nfsvers=3 state=mounted
+      action: mount name=/mnt/data src=frontend001:/mnt/data fstype=nfs opts=rw,async,nfsvers=3 state=mounted
