--- a/ansible/tasks/nfs_mount_persistent_disk.yml
+++ b/ansible/tasks/nfs_mount_persistent_disk.yml
@@ -25,7 +25,7 @@
       shell: chown -R trubetsk:trubetsk {{ mount_point }}
     - name: export data mount via NFS
       sudo: yes
-      nfsexport: path={{ mount_point }} dest=/etc/exports options=rw,no_root_squash,sync
+      nfsexport: path={{ mount_point }} dest=/etc/exports options=rw,no_root_squash,async
       notify:
         - restart NFS
   handlers:
@@ -43,4 +43,4 @@
       file: path={{ mount_point }} state=directory
     - name: mount the exported data directory 
       sudo: yes
-      action: mount name={{ mount_point }} src=frontend001:/mnt/data fstype=nfs opts=rw,sync,nfsvers=3 state=mounted
+      action: mount name={{ mount_point }} src=frontend001:/mnt/data fstype=nfs opts=rw,async,nfsvers=3 state=mounted
