--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-#- include: nfs_mount_persistent_disk.yml tags=nfs,pd
-- include: install_gcsfuse.yml tags=gcsfuse
+#- include: install_gcsfuse.yml tags=gcsfuse
+- include: mount_gcs_bucket.yml tags=gcsfuse
