test cluster for gcsfuse

--- a/config/test_env.conf
+++ b/config/test_env.conf
@@ -27,7 +27,7 @@ cloud=google-cloud
 login=google-login
 setup_provider=ansible-slurm
 security_group=default
-image_id=gotcloud-base
+image_id=gotcloud-base-v2
 flavor=n1-standard-1
 frontend_nodes=1
 compute_nodes=1
