--- a/config/test_env.conf
+++ b/config/test_env.conf
@@ -20,6 +20,8 @@ user_key_public=~/.ssh/google_compute_engine.pub
 provider=ansible
 frontend_groups=slurm_master
 compute_groups=slurm_clients
+global_var_slurm_selecttype=select/cons_res
+global_var_slurm_selecttypeparameters=CR_CPU_Memory
 
 # Define cluster running SLURM
 [cluster/gcsfuse]
@@ -28,6 +30,7 @@ login=google-login
 setup_provider=ansible-slurm
 security_group=default
 image_id=gotcloud-base-v2
+boot_disk_size=100
 flavor=n1-standard-1
 frontend_nodes=1
 compute_nodes=1
