--- a/ansible/roles/compute/vars/main.yml
+++ b/ansible/roles/compute/vars/main.yml
@@ -1,3 +1,4 @@
-mount_point: /mnt/data/
-persistent_disk: data-thousand-genomes
+mount_point: /mnt/output/
+persistent_disk: gcsfuse-data
 zone: us-central1-b
+device_id: /dev/sdb
