--- a/ansible/roles/gateway/tasks/main.yml
+++ b/ansible/roles/gateway/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 # mount a persistent disk across the cluster
-- include: mount_persistent_disk.yml 
+- include: mount_persistent_disk.yml tags=nfs 
