--- a/ansible/roles/gateway/tasks/mount_persistent_disk.yml
+++ b/ansible/roles/gateway/tasks/mount_persistent_disk.yml
@@ -1,19 +1,27 @@
 ---
 ## mount persistent disk across cluster
 - name: find gateway IP address
-  local_action: shell grep frontend /Users/vasya/.elasticluster/storage/ansible-inventory.gotcloud | cut -d " " -f 2 | cut -f 2 -d "="
+  local_action: shell grep frontend {{ inventory_file }} | cut -d " " -f 2 | cut -f 2 -d "="
   register: gateway_ip
 - name: find gateway image
   local_action: shell gcloud compute instances list | grep {{ gateway_ip.stdout }} - | cut -d " " -f 1
   register: gateway_image
 - name: attach persistent disk
-  local_action: command gcloud compute instances attach-disk {{ gateway_image.stdout }} --disk={{ persistent_disk }} --zone={{ zone }}
+  local_action:
+    module: gce_pd
+    pem_file: /Users/vasya/Projects/boehnkelab/google-gotcloud/auth/gotGoogleCloud-7882344317db.pem
+    project_id: friendly-medley-91616
+    service_account_email: 1008716305589-i8l6q0q8d8egnmbklpnbqll1vikgppb3@developer.gserviceaccount.com
+    mode: READ_WRITE
+    instance_name: "{{ gateway_image.stdout }}"
+    name: gcsfuse-data
+    state: present
 - name: create data mount point
   sudo: yes
   file: path={{ mount_point }} state=directory mode=755 owner=nobody group=nogroup
-- name: format and mount Persistent Disk
-  sudo: yes
-  shell: /usr/share/google/safe_format_and_mount -m "mkfs.ext4 -F" /dev/sdc {{ mount_point }}
+#- name: format and mount Persistent Disk
+#  sudo: yes
+#  shell: /usr/share/google/safe_format_and_mount -m "mkfs.ext4 -F" {{ device_id }} {{ mount_point }}
 - name: make sure permissions are set
   sudo: yes
   shell: chown -R trubetsk:trubetsk {{ mount_point }}
