--- a/ansible/roles/gateway/tasks/mount_persistent_disk.yml
+++ b/ansible/roles/gateway/tasks/mount_persistent_disk.yml
@@ -19,9 +19,13 @@
 - name: create data mount point
   sudo: yes
   file: path={{ mount_point }} state=directory mode=755 owner=nobody group=nogroup
-#- name: format and mount Persistent Disk
-#  sudo: yes
-#  shell: /usr/share/google/safe_format_and_mount -m "mkfs.ext4 -F" {{ device_id }} {{ mount_point }}
+- name: Check if device is mounted.
+  shell: mount -l | grep {{ device_id }} | awk '{print $5}' 
+  register: mounted
+- name: format and mount Persistent Disk
+  sudo: yes
+  shell: /usr/share/google/safe_format_and_mount -m "mkfs.ext4 -F" {{ device_id }} {{ mount_point }}
+  when: mounted.stdout != "ext4"
 - name: make sure permissions are set
   sudo: yes
   shell: chown -R trubetsk:trubetsk {{ mount_point }}
