--- a/config/multi_sample_snpcall_gcsfuse.conf
+++ b/config/multi_sample_snpcall_gcsfuse.conf
@@ -1,3 +1,4 @@
-OUT_DIR    = /mnt/output/multi_sample_output/ 
-BATCH_TYPE = slurm
-REF_DIR = /mnt/data/reference/
+OUT_DIR    = /mnt/data/test_1000g_bams/bamQC_output/
+BATCH_TYPE = slurmi
+BATCH_OPTS = "-B 2"
+REF_DIR = /mnt/data/gotcloud.ref/
