--- a/config/test_env.conf
+++ b/config/test_env.conf
@@ -1,11 +1,11 @@
-# Create a cloud provider (call it "google-cloud")
+# Create a cloud provider
 [cloud/google-cloud]
 provider=google
 gce_project_id=friendly-medley-91616
 gce_client_id=1008716305589-3feumltnud52bo062jqgimof3t0uesri.apps.googleusercontent.com
 gce_client_secret=kpYxHNeozEtx6mP1iQxFfLbW
 
-# Create a login (call it "google-login")
+# Create a login 
 [login/google-login]
 image_user=trubetsk
 image_user_sudo=root
@@ -14,8 +14,7 @@ user_key_name=elasticluster
 user_key_private=~/.ssh/google_compute_engine
 user_key_public=~/.ssh/google_compute_engine.pub
 
-##############################################################
-# SLURM 
+# SLURM configuration defined in Ansible 
 [setup/ansible-slurm]
 provider=ansible
 frontend_groups=slurm_master
@@ -24,16 +23,19 @@ global_var_slurm_selecttype=select/cons_res
 global_var_slurm_selecttypeparameters=CR_CPU_Memory
 
 # Define cluster running SLURM
-[cluster/gcsfuse]
+[cluster/super-awesome-cluster]
 cloud=google-cloud
 login=google-login
 setup_provider=ansible-slurm
 security_group=default
 image_id=gotcloud-base-v2
-boot_disk_size=100
+boot_disk_size=10
 flavor=n1-standard-1
 frontend_nodes=1
 compute_nodes=1
 image_userdata=
 ssh_to=frontend
 
+# customize our gateway machine
+[cluster/gce-gotcloud/frontend]
+flavor=n1-standard-16
