--- a/ansible/roles/gateway/vars/main.yml
+++ b/ansible/roles/gateway/vars/main.yml
@@ -1,4 +1,7 @@
-mount_point: /mnt/output/
-persistent_disk: gcsfuse-data
+input_mount: /mnt/inputs/
+output_mount: /mnt/outputs/
+input_disk:  fastqs-24-1000g
+output_disk: alignment-output
 zone: us-central1-b
-device_id: /dev/sdb
+input_device: /dev/sdc
+output_device: /dev/sdd
