split out mounting of input and output persistent disks. that allows us to specify one or both using tags

--- a/ansible/roles/compute/tasks/main.yml
+++ b/ansible/roles/compute/tasks/main.yml
@@ -1,3 +1,4 @@
 ---
 # compute node plays
-- include: mount_persistent_disk.yml tags=nfs 
+- include: mount_input_persistent_disk.yml tags=nfs,input 
+- include: mount_outpu_persistent_disk.yml tags=nfs,output
