--- a/ansible/roles/gateway/tasks/main.yml
+++ b/ansible/roles/gateway/tasks/main.yml
@@ -1,3 +1,4 @@
 ---
 # mount a persistent disk across the cluster
-- include: mount_persistent_disk.yml tags=nfs 
+- include: mount_input_persistent_disk.yml tags=nfs,input 
+- include: mount_output_persistent_disk.yml tags=nfs,output
