--- a/ansible/roles/gateway/tasks/mount_output_persistent_disk.yml
+++ b/ansible/roles/gateway/tasks/mount_output_persistent_disk.yml
@@ -1,5 +1,5 @@
 ---
-## mount persistent disk for inputs across cluster
+## mount persistent disk for outputs across cluster
 - name: find gateway IP address
   local_action: shell grep frontend {{ inventory_file }} | cut -d " " -f 2 | cut -f 2 -d "="
   register: gateway_ip
@@ -16,25 +16,6 @@
     instance_name: "{{ gateway_image.stdout }}"
     name: "{{ input_disk }}"
     state: present
-- name: create input data mount point
-  sudo: yes
-  file: path={{ input_mount }} state=directory mode=755 owner=nobody group=nogroup
-- name: Check if input device is mounted.
-  shell: mount -l | grep {{ input_device }} | awk '{print $5}' 
-  register: input_is_mounted
-- name: format and mount inputs Persistent Disk
-  sudo: yes
-  shell: /usr/share/google/safe_format_and_mount -m "mkfs.ext4 -F" {{ input_device }} {{ input_mount }}
-- name: make sure permissions for inputs mount are set
-  sudo: yes
-  shell: chown -R trubetsk:trubetsk {{ input_mount }}
-- name: export input mount via NFS
-  sudo: yes
-  nfsexport: path={{ input_mount }} dest=/etc/exports options=rw,no_root_squash,async
-  notify:
-    - restart NFS
-  when: input_is_mounted.stdout != "ext4"
-
 - name: attach persistent disk of outputs
   local_action:
     module: gce_pd
@@ -49,7 +30,7 @@
   sudo: yes
   file: path={{ output_mount }} state=directory mode=755 owner=nobody group=nogroup
 - name: Check if output device is mounted.
-  shell: mount -l | grep {{ output_device }} | awk '{print $5}' 
+  shell: mount -l | grep {{ output_device }} | awk '{print $5}'
   register: output_is_mounted
 - name: format and mount outputs Persistent Disk
   sudo: yes
@@ -63,3 +44,4 @@
   nfsexport: path={{ output_mount }} dest=/etc/exports options=rw,no_root_squash,async
   notify:
     - restart NFS
+
