--- a/ansible/roles/gateway/vars/main.yml
+++ b/ansible/roles/gateway/vars/main.yml
@@ -1,7 +1,7 @@
 input_mount: /mnt/inputs/
 output_mount: /mnt/outputs/
 input_disk:  fastqs-24-1000g
-output_disk: alignment-output
+output_disk: chr20-1000g-output 
 zone: us-central1-b
-input_device: /dev/sdc
-output_device: /dev/sdd
+output_device: /dev/sdc
+input_device: /dev/sdd
